2012-12-08  Rob Buis  <rbuis@rim.com>

        [BlackBerry] Remove no-op line in WebPage.cpp
        https://bugs.webkit.org/show_bug.cgi?id=104385

        Reviewed by Antonio Gomes.

        Remove self-assignment no-op line. Must have been left when I removed the
        mapFromTransformed part.

        * Api/WebPage.cpp:
        (BlackBerry::WebKit::WebPage::touchPointAsMouseEvent):

2012-12-07  Nima Ghanavatian  <nghanavatian@rim.com>

        [BlackBerry] General code cleanup and improved logging.
        https://bugs.webkit.org/show_bug.cgi?id=104389

        Reviewed by Rob Buis.

        Internally reviewed by Mike Fenton

        * WebKitSupport/InputHandler.cpp:
        (BlackBerry::WebKit::convertStringToWchar):
        (BlackBerry::WebKit::InputHandler::requestCheckingOfString):
        (BlackBerry::WebKit::InputHandler::handleKeyboardInput):

2012-12-07  Nima Ghanavatian  <nghanavatian@rim.com>

        [BlackBerry] Strip whitespace from learned text.
        https://bugs.webkit.org/show_bug.cgi?id=104391

        Reviewed by Rob Buis.

        This was removing the first word from the sentence being learned. Using
        stripWhiteSpace to remove spaces from the start and end of the text.

        Internally reviewed by Mike Fenton.

        * WebKitSupport/InputHandler.cpp:
        (BlackBerry::WebKit::InputHandler::learnText):

2012-12-07  Otto Derek Cheung  <otcheung@rim.com>

        [BlackBerry] GeolocationClientBB should show file system path in prompts when host is not avaliable
        https://bugs.webkit.org/show_bug.cgi?id=103785

        PR 247656

        Reviewed by Rob Buis.

        Adding a special case for origins with protocol "file". We will use the filepath as
        an origin when asking for geolocation permission.

        If the origin is unique (ie. from a sandboxed iframe), we will fail the location request
        right away.

        * WebCoreSupport/GeolocationClientBlackBerry.cpp:
        (getOrigin):